crates/monospace-cli/src/snapshots/characterization/monospace_cli__sweep__every_connector_in_every_stroke.snap
---
source: crates/monospace-cli/src/sweep.rs
description: "This file records what the code does over a range too wide to assert by hand. A change here is the consequence of a decision taken elsewhere, not a decision. It is accepted after a report of how many cases moved, in which families, and three examples with their before and after."
expression: joined
---
connector in ascii



 ----------




connector in light



 ──────────




connector in light-round



 ──────────




connector in heavy



 ━━━━━━━━━━




connector in double



 ══════════
